# hsl

./: .editorconfig  .env.example  .gitignore  Readme.md  pyproject.toml  restore.sh
.streamlit/: config.toml
experiments/: browser_plan.py  plan_validation copy.py  plan_validation.py  reasoning_browser.json
experiments/language_server/: hsl_grammar.py  hsl_plugin.py  server.py
experiments/modules/: gen_pydantic_instance.py  graph_of_thought.py  self-discover.py
experiments/old/: GenPydanticInstance.py  browser copy.py  browser-discovery copy.py  browser_agents.py  browser_plan copy.py  browser_tasks.py  graph_of_thought_test.py  graph_traversal.py  kgb.py  main.py  vis.py
experiments/tools/: browser copy.py  browser.py  browser_remote.py  calculator_tools.py  search_tools.py
experiments/tools/utils/: page_structure.js
experiments/tools/utils/old/: browser_tools.py  cleanup_html.py  new_backup.js  page_structure copy.js  page_structure_new copy.js  page_structure_yml_backup.js
experiments/utils/: process_errors.py  process_yaml.py
experiments/yaml/: google_30 copy 2.yaml  google_30 copy 3.yaml  google_30 copy.yaml  google_30.yaml  google_30_prcessed.yaml
hsl_examples/: browser_google_search.hsl  browser_send_gmail.hsl  os_analyze_table.hsl  program.hsl  program.md
md/: description.md  rules.md  template.md
md/prompts/: dap.md  outline.md  streamlit_docs.md
md/prompts/old/: outline copy.md
md/spr/: program.md
utils/: build_llm_context.py
