[tool.poetry]
name = "HSL"
version = "0.1.0"
description = ""
authors = ["HSLang.ai"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
playwright-stealth = "^1.0.6"
playwright = "^1.41.2"
lark = "^1.1.9"
pygls = {extras = ["ws"], version = "^1.3.1"}
debugpy = "^1.8.1"
lsprotocol = "^2023.0.1"
solara = "1.31.0"
markdown = "^3.6"
pymdown-extensions = "^10.8"
pygments = "^2.17.2"
dspy-ai = "^2.4.5"


[tool.poetry.group.dev.dependencies]
pyperclip = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
